--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "tailwindcss": "^4.0.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "sass-embedded": "^1.83.4",
     "vite": "^6.0.5"
   }
 }
