--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,14 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
     "sass-embedded": "^1.83.4",
     "vite": "^6.0.5"
   }
