--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 blinker==1.9.0
 certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.0
 Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.7.1
@@ -12,6 +14,7 @@ Jinja2==3.1.5
 MarkupSafe==3.0.2
 packaging==24.2
 psycopg2-binary==2.9.10
+pycparser==2.22
 PyJWT==2.10.1
 requests==2.32.3
 urllib3==2.3.0
