--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@primevue/themes": "^4.2.5",
     "@tailwindcss/vite": "^4.0.0",
+    "@vueuse/core": "^12.5.0",
     "axios": "^1.7.9",
     "jsonwebtoken": "^9.0.2",
     "pinia": "^2.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "tailwindcss": "^4.0.0",
+    "vidstack": "^1.12.12",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
