--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.13.1
 blinker==1.9.0
 certifi==2024.12.14
 cffi==1.17.1
@@ -17,5 +18,7 @@ psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
 requests==2.32.3
+soupsieve==2.6
+typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
