--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "@vueuse/core": "^12.5.0",
     "axios": "^1.7.9",
+    "bottom-navigation-vue": "^3.3.5",
     "jsonwebtoken": "^9.0.2",
     "pinia": "^2.3.1",
     "primeicons": "^7.0.0",
