--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primevue/themes": "^4.2.5",
     "@tailwindcss/vite": "^4.0.0",
+    "@tresjs/core": "^4.3.3",
     "@vueuse/core": "^12.5.0",
     "axios": "^1.7.9",
     "bottom-navigation-vue": "^3.3.5",
@@ -19,6 +20,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "tailwindcss": "^4.0.0",
+    "three": "^0.173.0",
     "vidstack": "^1.12.12",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/node": "^22.13.1",
+    "@types/three": "^0.173.0",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
     "@vitejs/plugin-vue": "^5.2.1",
