--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,47 +1,38 @@
 {
-  "name": "waveger-vue-app",
-  "private": true,
+  "name": "waveger",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
+    "lint": "eslint . --fix",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "@primevue/themes": "^4.2.5",
-    "@tailwindcss/vite": "^4.0.0",
-    "@tresjs/core": "^4.3.3",
-    "@vueuse/core": "^12.5.0",
     "axios": "^1.7.9",
-    "bottom-navigation-vue": "^3.3.5",
-    "jsonwebtoken": "^9.0.2",
-    "pinia": "^2.3.1",
-    "primeicons": "^7.0.0",
-    "primevue": "^4.2.5",
-    "tailwindcss": "^4.0.0",
-    "three": "^0.173.0",
-    "vidstack": "^1.12.12",
+    "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/node": "^22.13.1",
-    "@types/three": "^0.173.0",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
-    "globals": "^15.14.0",
-    "prettier": "^3.4.2",
-    "sass-embedded": "^1.83.4",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.5",
-    "vue-tsc": "^2.2.0"
+    "jiti": "^2.4.2",
+    "npm-run-all2": "^7.0.2",
+    "prettier": "^3.5.1",
+    "typescript": "~5.7.3",
+    "vite": "^6.1.0",
+    "vite-plugin-vue-devtools": "^7.7.2",
+    "vue-tsc": "^2.2.2"
   }
 }
