--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+bcrypt==4.2.1
 blinker==1.9.0
 certifi==2024.12.14
 cffi==1.17.1
@@ -5,6 +6,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.0
 Flask==3.1.0
+Flask-Bcrypt==1.0.1
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.7.1
 gunicorn==23.0.0
