--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+coverage==7.6.12
 cryptography==44.0.0
 Deprecated==1.2.18
 Flask==3.1.0
@@ -28,6 +29,7 @@ pycparser==2.22
 Pygments==2.19.1
 PyJWT==2.10.1
 pytest==8.3.4
+pytest-cov==6.0.0
 requests==2.32.3
 rich==13.9.4
 soupsieve==2.6
