--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,6 +30,7 @@ Pygments==2.19.1
 PyJWT==2.10.1
 pytest==8.3.4
 pytest-cov==6.0.0
+python-dotenv==1.0.1
 requests==2.32.3
 rich==13.9.4
 soupsieve==2.6
