--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.0.0",
     "@vueuse/core": "^12.7.0",
     "axios": "^1.7.9",
     "pinia": "^3.0.1",
+    "primevue": "^4.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
