--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@vueuse/core": "^12.7.0",
     "axios": "^1.7.9",
     "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
