--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.0.0",
+    "@tailwindcss/vite": "^4.0.14",
     "@vueuse/core": "^12.7.0",
     "axios": "^1.7.9",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.1",
+    "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
