--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.1",
+    "remove": "^0.1.5",
     "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
